# hoho2025

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
hoho/: __init__.py  color_mappings.py  hoho.py  read_write_colmap.py  vis.py  viz3d.py  wed.py
hoho2025/: __init__.py  color_mappings.py  example_solutions.py  hoho.py  metric_helper.py  read_write_colmap.py  vis.py  viz3d.py
notebooks/: example.ipynb  example_2025.ipynb  example_2026.ipynb
